--- a/.travis.yml
+++ b/.travis.yml
@@ -75,7 +75,7 @@ jobs:
     - mkdir -p /opt/openshift
     - wget -qO- https://github.com/openshift/origin/releases/download/v3.11.0/openshift-origin-client-tools-v3.11.0-0cbc58b-linux-64bit.tar.gz | tar xvzf - -C /opt/openshift --strip-components=1
     - export PATH=$PATH:/opt/openshift
-    - echo $OPENSHIFT_CERTIFICATE >> /tmp/openshift.crt
+    - echo $OPENSHIFT_CERT | base64 --decode > /tmp/openshift.crt
     services:
     # Require docker to be running in the build context
     - docker
@@ -104,6 +104,7 @@ jobs:
     # ...and finally remove cached credentials
     - oc logout
     - docker logout
+    - rm /tmp/openshift.crt
 
 # Flow control
 # This section defines the order in which stages are run and when to run certain stages
