--- a/.travis.yml
+++ b/.travis.yml
@@ -75,15 +75,15 @@ jobs:
     - mkdir -p /opt/openshift
     - wget -qO- https://github.com/openshift/origin/releases/download/v3.11.0/openshift-origin-client-tools-v3.11.0-0cbc58b-linux-64bit.tar.gz | tar xvzf - -C /opt/openshift --strip-components=1
     - export PATH=$PATH:/opt/openshift
+    - echo $OPENSHIFT_CERT | base64 --decode > /tmp/openshift.crt
     services:
     # Require docker to be running in the build context
     - docker
     script:
     # Authenticate towards Docker Hub
     - docker login -u "$DOCKER_USER" -p "$DOCKER_PASS"
-
     # Authenticate towards OpenShift
-    - oc login $OPENSHIFT_URL --token=$OPENSHIFT_TOKEN --insecure-skip-tls-verify=true
+    - oc login $OPENSHIFT_URL --token=$OPENSHIFT_TOKEN --certificate-authority=/tmp/openshift.crt
 
     # If this is not a tag, build images tagged :latest
     - export PHASE="ci"
@@ -103,6 +103,7 @@ jobs:
     # ...and finally remove cached credentials
     - oc logout
     - docker logout
+    - rm /tmp/openshift.crt
 
 # Flow control
 # This section defines the order in which stages are run and when to run certain stages
