--- a/app/android/build.gradle
+++ b/app/android/build.gradle
@@ -22,12 +22,15 @@ buildscript {
 allprojects {
     repositories {
         mavenLocal()
+        maven {
+            url("$rootDir/../node_modules/react-native/android")
+        }
+        maven {
+            // Android JSC is installed from npm
+            url("$rootDir/../node_modules/jsc-android/dist")
+        }
         google()
         jcenter()
-        google()
-        maven {
-            url "$rootDir/../node_modules/react-native/android"
-        }
     }
 }
 
