--- a/app/ios/Podfile
+++ b/app/ios/Podfile
@@ -1,8 +1,8 @@
-platform :ios, '9.0'
+platform :ios, '10.0'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
 target 'Egendata' do
-  # Pods for RnDiffApp
+  # Pods for Egendata
   pod 'React', :path => '../node_modules/react-native/'
   pod 'React-Core', :path => '../node_modules/react-native/React'
   pod 'React-DevSupport', :path => '../node_modules/react-native/React'
@@ -25,16 +25,49 @@ target 'Egendata' do
   pod 'DoubleConversion', :podspec => '../node_modules/react-native/third-party-podspecs/DoubleConversion.podspec'
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
-  target 'RnDiffAppTests' do
+  # Add new pods below this line
+  pod 'react-native-config', :path => '../node_modules/react-native-config'
+
+  target 'EgendataTests' do
     inherit! :search_paths
     # Pods for testing
   end
   use_native_modules!
 end
-target 'RnDiffApp-tvOS' do
-  # Pods for RnDiffApp-tvOS
-  target 'RnDiffApp-tvOSTests' do
+target 'Egendata-tvOS' do
+  # Pods for Egendata-tvOS
+  target 'Egendata-tvOSTests' do
     inherit! :search_paths
     # Pods for testing
   end
 end
+
+post_install do |installer|
+    installer.pods_project.targets.each do |target|
+
+      # The following is needed to ensure the "archive" step works in XCode.
+      # It removes React & Yoga from the Pods project, as it is already included in the main project.
+      # Without this, you'd see errors when you archive like:
+      # "Multiple commands produce ... libReact.a"
+      # "Multiple commands produce ... libyoga.a"
+
+      targets_to_ignore = %w(React yoga)
+
+      if targets_to_ignore.include? target.name
+        target.remove_from_project
+      end
+
+      if target.name == 'react-native-config'
+        phase = target.project.new(Xcodeproj::Project::Object::PBXShellScriptBuildPhase)
+        phase.shell_script = "cd ../../"\
+                             " && RNC_ROOT=./node_modules/react-native-config/"\
+                             " && export SYMROOT=$RNC_ROOT/ios/ReactNativeConfig"\
+                             " && export BUILD_DIR=$RNC_ROOT/ios/ReactNativeConfig"\
+                             " && ruby $RNC_ROOT/ios/ReactNativeConfig/BuildDotenvConfig.ruby"
+  
+        target.build_phases << phase
+        target.build_phases.move(phase,0)
+      end
+
+    end
+  end
