--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
     "test": "NODE_ENV=test jest --color",
     "test:watch": "NODE_ENV=test jest --watchAll",
     "lint": "eslint '**/*.js'",
+    "prettier": "eslint '**/*.js' --fix",
     "e2e:build": "cd __e2e__/ && webpack",
     "e2e:start": "node __e2e__/dist/index.js",
     "e2e:watch": "npm run e2e:build && nodemon __e2e__/dist/ --watch __e2e__/dist/"
@@ -41,10 +42,8 @@
     "react-native-config": "0.11.7",
     "react-native-device-info": "1.4.1",
     "react-native-gesture-handler": "1.1.0",
-    "react-native-json-tree": "1.2.0",
     "react-native-modal": "9.0.0",
     "react-native-qrcode-scanner": "1.1.2",
-    "react-native-securerandom": "0.3.0",
     "react-native-svg": "9.2.4",
     "react-native-svg-icon": "0.8.1",
     "react-native-svg-uri": "1.2.3",
@@ -65,7 +64,6 @@
     "@types/jest": "^24.0.17",
     "@types/react": "^16.8.24",
     "@types/react-native": "^0.60.3",
-    "@types/react-native-push-notification": "^3.0.4",
     "@types/react-navigation": "^3.0.4",
     "@types/react-test-renderer": "^16.8.3",
     "babel-eslint": "^10.0.1",
@@ -78,6 +76,7 @@
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jest": "^22.4.1",
     "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-standard": "^4.0.0",
@@ -90,7 +89,7 @@
     "lolex": "^3.1.0",
     "metro-react-native-babel-preset": "^0.55.0",
     "nodemon": "^1.18.10",
-    "prettier": "^1.16.4",
+    "prettier": "^1.18.2",
     "react-dom": "^16.7.0",
     "react-native-dotenv": "^0.2.0",
     "react-native-svg-transformer": "^0.12.1",
