Android build working

--- a/app/android/app/build.gradle
+++ b/app/android/app/build.gradle
@@ -120,7 +120,7 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
-        applicationId "se.egendata"
+        applicationId "com.egendata"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 6 
