fix: QRCodeScanner unbroken in iOS

--- a/app/package.json
+++ b/app/package.json
@@ -43,6 +43,7 @@
     "react-native-device-info": "1.4.1",
     "react-native-gesture-handler": "1.1.0",
     "react-native-modal": "9.0.0",
+    "react-native-permissions": "^1.2.0",
     "react-native-qrcode-scanner": "1.1.2",
     "react-native-svg": "9.2.4",
     "react-native-svg-icon": "0.8.1",
