--- a/app/ios/Podfile
+++ b/app/ios/Podfile
@@ -26,7 +26,9 @@ target 'Egendata' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
   # Add new pods below this line
+  pod 'ReactNativePermissions', :path => '../node_modules/react-native-permissions'
   pod 'react-native-config', :path => '../node_modules/react-native-config'
+  pod 'react-native-camera', :path => '../node_modules/react-native-camera'
 
   target 'EgendataTests' do
     inherit! :search_paths
