Updated package versions

--- a/operator/.env
+++ b/operator/.env
@@ -1,4 +1,4 @@
-HOST=http://localhost:3000
+HOST=http://192.168.110.179:3000
 # development, test or production
 NODE_ENV=development
 # optional, defaults to 3000
