--- a/app/package.json
+++ b/app/package.json
@@ -25,9 +25,8 @@
   ],
   "license": "Apache-2.0",
   "dependencies": {
-    "@egendata/messaging": "0.3.1",
+    "@egendata/messaging": "0.3.2",
     "@react-native-community/async-storage": "1.6.1",
-    "@trackforce/react-native-crypto": "0.0.8",
     "@types/js-base64": "2.3.1",
     "axios": "0.19.0",
     "buffer": "5.2.1",
@@ -45,6 +44,7 @@
     "react-native-modal": "11.3.1",
     "react-native-permissions": "^1.2.0",
     "react-native-qrcode-scanner": "1.2.1",
+    "react-native-simple-crypto": "github:ibobo/react-native-simple-crypto",
     "react-native-svg": "9.6.2",
     "react-native-svg-icon": "0.8.1",
     "react-native-svg-uri": "1.2.3",
